--- a/src/App.css
+++ b/src/App.css
@@ -51,33 +51,35 @@
 }
 
 .project-button {
-  background-color: rgba(4, 0, 214, 0.2);
+  background-color: rgba(4, 0, 214, 0);
   text-align: center;
-  cursor:pointer;
-  padding: 10px;
 }
 
 .project-button:hover {
-  background-color: rgb(11, 10, 122);
+  background-color: rgb(0, 0, 0);
   color: #fff;
   transition: 200ms;
 }
 
-.project-image {
-  opacity: 50%;
+.card-title {
+  font-size: 2rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.card-text {
+  font-size: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .img-thumbnail {
-  width: auto;
-  height: 300px;
-  margin-bottom: 50px;
-  cursor: pointer;
+  width: 100%;
 }
 
 .slider {
-  width: 300px;
+  width: 500px;
   text-align: center;
   overflow: hidden;
+  margin-top: 0px;
 }
 
 .slides {
@@ -110,11 +112,10 @@
 .slides > div {
   scroll-snap-align: start;
   flex-shrink: 0;
-  width: 300px;
-  height: 300px;
+  width: 500px;
+  height: 70vh;
   margin-right: 50px;
   border-radius: 10px;
-  background: #eee;
   transform-origin: center center;
   transform: scale(1);
   transition: transform 0.5s;
@@ -123,11 +124,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 100px;
 }
-.slides > div:target {
+/* .slides > div:target {
   transform: scale(0.8);
-}
+} */
 .author-info {
   background: rgba(0, 0, 0, 0.75);
   color: white;
@@ -142,14 +142,14 @@
 .author-info a {
   color: white;
 }
-img {
+/* img {
   object-fit: cover;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-}
+} */
 
 .slider > a {
   display: inline-flex;
